# agi

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CIRCULAR_DEPS_FIXED.md  CLAUDE.md  COMPONENTS_COPIED.md  GUIDED.md  LICENSE  PACKAGES_CREATED.md  PUBLISHING.md  README.md  WEB_SDK_MIGRATION.md  WEB_SDK_STYLING_FIX.md  agi-markdown  biome.json  cleanup-old-code.sh  cli.cjs  drizzle.config.ts  index.ts  package.json  publish.env  sst-env.d.ts  sst.config.ts  test-monorepo.sh  tsconfig.base.json  tsconfig.json
.agi/: agents.json  agi.sqlite  auth.json  config.json
.agi/agents/: commit.txt  git.txt
.agi/commands/: commit.json
.github/workflows/: publish-ai-sdk.yml  publish-from-tag.yml  publish-openclaw-ottorouter.yml  publish-openclaw-setu.yml  release-beta.yml  release-binaries.yml  release-desktop.yml  release-prod.yml  release.yml  test-build.yml
apps/canvas/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/canvas/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/canvas/src-tauri/capabilities/: default.json
apps/canvas/src-tauri/icons/: icon.icns
apps/canvas/src-tauri/src/: browser.rs  cleanup.rs  debug_log.rs  ghostty.rs  ghostty_vt.rs  lib.rs  main.rs  native_terminal.rs  runtime.rs  workspace_file.rs
apps/cli/: .gitignore  index.ts  package.json  tsconfig.json
apps/desktop/: README.md  index.html  package.json  sst-env.d.ts  tailwind.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: entitlements.plist
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: fonts.rs  git.rs  github.rs  mod.rs  onboarding.rs  project.rs  server.rs  updater.rs  window.rs
apps/install/: README.md  install.js  package.json  start.js
apps/intro-video/: package.json  tsconfig.json
apps/landing/: astro.config.mjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/launcher/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/capabilities/: default.json
apps/launcher/src-tauri/icons/: icon.icns
apps/launcher/src-tauri/src/: lib.rs  main.rs
apps/launcher/src-tauri/src/commands/: config.rs  crypto.rs  desktop.rs  docker.rs  mod.rs  ports.rs  updater.rs
apps/mobile/: AGENTS.md  README.md  app.config.ts  babel.config.js  drizzle.config.ts  eas.json  index.ts  metro.config.js  package.json  test-db.js  tsconfig.json
apps/preview-api/: drizzle.config.ts  package.json  sst-env.d.ts  tsconfig.json
apps/preview-web/: astro.config.mjs  package.json  tailwind.config.js
apps/router/: PLAN.md  package.json  tsconfig.json
apps/setu/: .gitignore  Dockerfile  drizzle.config.ts  package.json  tsconfig.json
apps/tui/: index.tsx  package.json  start.tsx  tsconfig.json
apps/web/: README.md  biome.json  index.html  package.json  tailwind.config.js  vite.config.ts
docker/: Dockerfile.windows-cli  Dockerfile.windows-test
docs/: FEATURE_SUMMARY.md  GIT_IMPLEMENTATION_COMPLETE.md  README.md  agents-tools.md  agi-plan.md  ai-sdk-v5.md  ai-sdk-v6-migration-plan.md  api.md  apply-patch-fuzzy-matching.md  architecture.md  auth-config-architecture.md  chatinput-z-index-fix.md  configuration.md  contributing.md  customization.md  dependency-graph.md  development-guide.md  development.md  diff-viewer-layout-fix.md  embedding-guide.md  environment.md  error-handling-debug-plan.md  error-handling-implementation-summary.md  file-editing-solution.md  fix-compaction-loop-and-ordering.md  fix-text-before-reasoning.md  getting-started.md  git-implementation-rework-plan.md  git-rework-README.md  git-rework-checklist.md  git-rework-summary.md  git-sidebar-api-fix.md  git-sidebar-fixes.md  git-sidebar-implementation-summary.md  git-sidebar-improvements.md  git-sidebar-plan.md  git-sidebar-simple-fixes.md  index.md  integration-guide.md  keyboard-shortcuts.md  (+25 more)
docs/bugs/: codex-stream-premature-termination.md
docs/design/: claude-code-oauth-findings.md  claude-code-tool-mapping.md
docs/plans/: ai-sdk-setu-token-auth-refresh.md  chat-input-slash-commands.md  code-consistency-todo.md  custom-declarative-providers.md  desktop-app-tauri.md  desktop-native-onboarding.md  file-mention-feature.md  (+19 more)
drizzle/: 0002_vengeful_warlock.sql
examples/: README.md  biome.json  embedded-hybrid-fallback.ts  simple-embedded.ts
infra/: domains.ts  landing.ts  og.ts  orm.ts  preview-api.ts  preview-web.ts  router.ts  script.ts  secrets.ts  setu.ts  utils.ts
scripts/: build-canvas-release.sh  build-canvas.ts  build-desktop-release.sh  build-desktop.ts  build-launcher-release.sh  build-web.ts  build-windows-cli.ts  build-windows-desktop.ts  bump-version.ts  capture-anthropic.py  capture-traffic.sh  compile.ts  download-vendor-bins.sh  install.sh  postinstall.cjs  prepare-canvas.ts  prepare-embedded-bins.ts  prepare-publish.ts  reset-db.ts  test-claude-spoof.ts  update-catalog.ts
tests/: acp-tools.test.ts  agents-prompts.test.ts  agents.test.ts  ask-route.test.ts  ask-service-error.test.ts  ask-stream-capture.test.ts  auth-web-openai.test.ts  auto-compact-threshold.test.ts  builtin-tools.test.ts  cli-auth-gate.test.ts  cli-startup.test.ts  commands.test.ts  config.test.ts  context-header.test.ts  custom-providers.test.ts  edit-replacers.test.ts  edit-tools.test.ts  guards.test.ts  init-command.test.ts  mcp-copilot-auth.test.ts  oauth-codex-continuation.test.ts  oauth-codex-prompt-mode.test.ts  oauth-codex-text-guard.test.ts  oauth-models.test.ts  ollama-discovery.test.ts  openai-oauth-client.test.ts  ottorouter-catalog.test.ts  patch-apply.test.ts  patch-parse.test.ts  provider-prompts.test.ts  reasoning-config.test.ts  runner-provider-options-merge.test.ts  server-standalone.test.ts  sessions-agent.test.ts  setu-catalog.test.ts  skills-enhanced.test.ts  skills.test.ts  solforge-catalog.test.ts  system-prompt-compose.test.ts  tool-approval-modes.test.ts  (+6 more)
(+746 files in other folders)
