[package]
name = "otto-canvas"
version = "0.1.0"
description = "Otto Canvas - persistent workspace for AI-native software teams"
authors = ["nitishxyz"]
edition = "2021"

[lib]
name = "canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
window-vibrancy = "0.7"
