[package]
name = "agi-desktop"
version = "0.1.0"
description = "AGI Desktop - AI-powered development assistant"
authors = ["nitishxyz"]
edition = "2021"

[lib]
name = "agi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

# Git operations
git2 = "0.19"

# Secure token storage
keyring = "3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for GitHub API)
reqwest = { version = "0.12", features = ["json"] }

# Utils
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
