[package]
name = "otto-desktop"
version = "0.1.0"
description = "otto desktop - AI-powered development assistant"
authors = ["nitishxyz"]
edition = "2021"

[lib]
name = "otto_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

# Git operations
git2 = "0.19"

# Secure token storage
keyring = "3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for GitHub API) - base features only, TLS backend added per-platform below
reqwest = { version = "0.12", features = ["json"] }

# Utils
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
semver = "1"
urlencoding = "2"

# Onboarding / wallet generation
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
rand = "0.8"

# macOS/Linux: vendored OpenSSL for TLS
[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { version = "0.12", features = ["native-tls-vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

# Windows: use native SChannel TLS (no OpenSSL/Perl needed)
[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { version = "0.12", features = ["native-tls"] }
