[package]
name = "otto-launcher"
version = "0.1.0"
description = "otto team launcher - Docker-based team development environment"
authors = ["nitishxyz"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "otto_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"
base64 = "0.22"

# Crypto for key generation + encryption
rand = "0.8"
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
ssh-key = { version = "0.6", features = ["ed25519", "std", "rand_core"] }

# Docker Engine API via HTTP over unix socket
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
tower = "0.5"
